Re: #509 z-index fix

--- a/source/sass/search/_object.scss
+++ b/source/sass/search/_object.scss
@@ -132,7 +132,6 @@
     text-align: center;
     padding: $pad;
     position: relative;
-    z-index: 2;
 
     .media-thumb-section{
       overflow: hidden;
